@@ -159,6 +159,7 @@
 - TW-1692 '42//' segfaults (thanks to Daniel Shahaf).
 - TW-1695 edit: Concurrent edits (thanks to Daniel Shahaf).
 - TW-1699 Command interpretation displayed incorrectly (thanks to Tomas Babej).
+- TW-1700 modify tags behavior changed (thanks to David Badura).
 - TW-1701 Some generated UUIDs deemed invalid (thanks to Wim Schuermann).
 - Prevent potential task duplication during import for non-pending tasks.
 - Show the active context in "context list", if any is active.
